# gothic3sdk

./: .gitignore  CMakeLists.txt  README.md
g3/Engine/include/g3sdk/Engine/: ge_actionmapper.h  ge_application.h  ge_wrapper_emfx2motion.h
g3/Engine/include/g3sdk/Engine/animation/: ge_wrapper_emfx2actor.h
g3/Game/include/g3sdk/Game/: GameEnum.h  ge_sessionkeys.h
g3/Game/include/g3sdk/Game/script/: ge_scriptprocessingunit.h
scripts/: CMakeLists.txt
scripts/Script_AdjustedTheft/: CMakeLists.txt  Script_AdjustedTheft.cpp
scripts/Script_AmbientAni/: CMakeLists.txt  Script_AmbientAni.cpp  Script_AmbientAni.h  Script_AmbientAni.rc  utils.cpp  utils.h
scripts/Script_Animation/: CMakeLists.txt  Script_Animation.aps  Script_Animation.cpp  Script_Animation.h  Script_Animation.rc  resource.h
scripts/Script_AttackCollision/: CMakeLists.txt  Script_AttackCollision.cpp  Script_AttackCollision.h  config.cpp  config.h
scripts/Script_NewBalance/: AIFunctions.cpp  AssessHit.cpp  AssessHit.h  CMakeLists.txt  CallHook.cpp  CallHook.h  CodePatch.cpp  CodePatch.cpp~RF9818b4.TMP  CodePatch.h  FunctionHook.cpp  FunctionHook.h  GameScripts.cpp  MyGUI.cpp  MyGUI.h  ScriptArgs.h  Script_NewBalance.cpp  Script_NewBalance.h  Script_NewBalance.rc  SharedConfig.cpp  SharedConfig.cpp~RF985b8a.TMP  SharedConfig.h  StateFunctions.cpp  StateFunctions.h  ge_DamageReceiver_ext.cpp  ge_DamageReceiver_ext.h  utility.cpp  utility.cpp~RF986732.TMP  utility.h
scripts/Script_RestoreWeapons/: CMakeLists.txt  RestoreGui.cpp  RestoreGui.h  Script_RestoreWeapons.cpp  Script_RestoreWeapons.h
scripts/Script_UI/: Script_UI.h
